操作説明の追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+	ホイール操作で地図を拡大・縮小<br>
+	ドラッグで表示領域を移動<br>
+	クリックで座標表示<br>
+	赤い四角をクリックすると、その地点の施設の詳細を表示<br>
+
+	<br>
+	<br>
+	
 	<canvas id="canvas" width="600" height="600" ></canvas>
 
 	<form>
