csvファイルから拠点情報を生成

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<br>
 
-	<div id="decription"></div>
+	<div id="description"></div>
 
 
 	<script type="text/javascript" src="js/map.js"></script>
